# Search-algorithms-server

./: client.py
src/: CMakeLists.txt  main.cpp
src/cachemanager/: CacheManager.hpp  RAMCacheManager.hpp
src/cachemanager_old/: CacheManager.cpp  CacheManager.hpp  Operation.cpp  Operation.hpp  SolverOperation.cpp  SolverOperation.hpp
src/cachemanager_old/util/: Crc32.c  Crc32.h  HashUtil.cpp  HashUtil.hpp
src/clienthandlers/: AbstractClientHandler.cpp  AbstractClientHandler.hpp  SolverClientHandler.hpp
src/parsers/: CommandToSearchSolverParser.cpp  CommandToSearchSolverParser.hpp  InputToGraphParser.cpp  InputToGraphParser.hpp  Parser.hpp
src/search/searchable/: Element.cpp  Graph.hpp  Searchable.hpp
src/search/searcher/: AStarSearcher.hpp  AbstractSearcher.hpp  BFSSearcher.hpp  BestFSSearcher.hpp  DFSSearcher.hpp  Searcher.hpp  SearcherFactory.hpp
src/server/: ParallelServer.cpp  ParallelServer.hpp  SerialServer.cpp  SerialServer.hpp  Server.hpp  ServerFactory.cpp  ServerFactory.hpp
src/solvers/: SearchSolver.cpp  SearchSolver.hpp  Solver.hpp
